Styled HTML elements

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
   <body>
     <div class="container">
       <h1>New York</h1>
+      <ul>
+        <li>35°C</li>
+        <li>Thunderstorms</li>
+        <li>Thursday 15:13</li>
+      </ul>
+      <div class="row stats">
+        <div class="col-6">Wind: 0 km/hr</div>
+        <div class="col-6">humidity: 45%</div>
+      </div>
+      <small
+        ><a href="https://github.com/danielletate/weather-app-final"
+          >Open-source code</a
+        >
+        by Danielle Tate</small
+      >
     </div>
     <script src="src/app.js"></script>
   </body>
