--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         />
         <ul>
           <li>35°C</li>
-          <li>Thunderstorms</li>
-          <li>Thursday 15:13</li>
+          <li class="description">Thunderstorms</li>
+          <li class="main-day">Thursday 15:13</li>
         </ul>
         <div class="row stats">
           <div class="col-6">Wind: 0 km/hr</div>
           <div class="col-6">humidity: 45%</div>
         </div>
-      </div>
-      <small
-        ><a
-          href="https://github.com/danielletate/weather-app-final"
-          target="_blank"
-          >Open-source code</a
+        <small
+          ><a
+            href="https://github.com/danielletate/weather-app-final"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Danielle Tate</small
         >
-        by Danielle Tate</small
-      >
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
