Styled the temperature section

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             alt="Thunderstorms"
           />
           <ul>
-            <li>
-              <span class="temperature">35</span>
-              <span class="units">°C | °F</span>
+            <li class="weather-temperature">
+              <span class="temperature"><strong>35</strong></span>
+              <span class="units">°C | <a href="#">°F</a></span>
             </li>
             <li class="description">Thunderstorms</li>
             <li class="date">Thursday 15:13</li>
           </ul>
           <div class="row stats">
-            <div class="col-6">Wind: 0 km/hr</div>
+            <div class="col-6">Wind: 0 km/h</div>
             <div class="col-6">humidity: 45%</div>
           </div>
 
