--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
   </head>
@@ -32,7 +33,7 @@
           </ul>
           <div class="row stats">
             <div class="col-6">Wind: 0 km/h</div>
-            <div class="col-6">humidity: 45%</div>
+            <div class="col-6">Humidity: 45%</div>
           </div>
 
           <hr />
