Included date function

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               <span class="units">°C | <a href="#">°F</a></span>
             </li>
             <li class="description" id="description"></li>
-            <li class="date" id="date"></li>
+            <li class="date">Last updated: <span id="date"></span></li>
           </ul>
           <div class="row stats">
             <div class="col-6">Wind: <span id="wind"></span> km/h</div>
-            <div class="col-6">Humidity: <span id="humidity"></span>  %</div>
+            <div class="col-6">Humidity: <span id="humidity"></span> %</div>
           </div>
 
           <hr />
