--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Enter a city..."
+                  class="form-control"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-default small"
+                />
+              </div>
+            </div>
+          </form>
+
           <h1 id="city"></h1>
           <img src="" id="icon" />
           <ul>
