Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
               <span class="temperature"
                 ><strong id="temperature"></strong
               ></span>
-              <span class="units">°C | <a href="#">°F</a></span>
+              <span class="units"
+                ><a href="#" id="celsius-link">°C </a>|
+                <a href="#" id="fahrenheit-link">°F</a></span
+              >
             </li>
             <li class="description" id="description"></li>
             <li class="date">Last updated: <span id="date"></span></li>
@@ -59,7 +62,7 @@
           <hr />
         </div>
 
-        <small
+        <small class="footnote"
           ><a
             href="https://github.com/danielletate/weather-app-final"
             target="_blank"
