--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
           </div>
 
           <hr />
+
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="forecast-day">Wed</div>
+                <img
+                  src="http://openweathermap.org/img/wn/04d@2x.png"
+                  alt=""
+                  width="40px"
+                />
+                <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-temperature-max">18° </span>
+                  <span class="weather-forecast-temperature-min">12° </span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <small class="footnote"
